## Copyright (C) Chris Ison 2001-2010
##
## This file is part of WildMidi
##
## WildMIDI is free software: you can redistribute and/or modify the player under the terms of the GNU General Public License and you can redistribute and/or modify the library under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the licenses, or(at your option) any later version.
##
## WildMIDI is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License and the GNU Lesser General Public License for more details.
##
## You should have received a copy of the GNU General Public License and the GNU Lesser General Public License along with WildMIDI. If not, see <http://www.gnu.org/licenses/>.
##

AUTOMAKE_OPTIONS=	foreign

man1_MANS = wildmidi.1
man3_MANS = WildMidi_GetString.3 WildMidi_Init.3 WildMidi_MasterVolume.3 WildMidi_Open.3 WildMidi_OpenBuffer.3 \
            WildMidi_GetOutput.3 WildMidi_SetOption.3 WildMidi_GetInfo.3 WildMidi_FastSeek.3 \
            WildMidi_Close.3 WildMidi_Shutdown.3
man5_MANS = wildmidi.cfg.5

EXTRA_DIST = $(man1_MANS) $(man3_MANS) $(man5_MANS) GPLv3.txt LGPLv3.txt
